fixed mobile version app buttons and some text alignments

--- a/style.css
+++ b/style.css
@@ -1631,7 +1631,9 @@ iframe,
         height: auto;
 
     }
-
+    h2 {
+        padding-top: 2%;
+    }
     .video {
         width: 100%;
         height: auto;
@@ -1692,6 +1694,12 @@ iframe,
         display: grid;
         grid-template-columns: 1fr;
         height: auto;
+    }
+
+    .donate-container .donate-image img {
+        width: 50%;
+        margin-left: 20%;
+        margin-bottom: 10%;
     }
 
     .footer {
@@ -1767,6 +1775,26 @@ iframe,
 
     }
 
+    .new-home .countries .chile .overlay .text_c {
+        font-size: 15px;
+
+    }
+
+    .new-home .countries .china .overlay .text_c {
+        font-size: 15px;
+
+    }
+
+    .new-home .countries .usa .overlay .text_c {
+        font-size: 15px;
+
+    }
+
+    .new-home .countries .paraguay .overlay .text_c {
+        font-size: 15px;
+
+    }
+
 
     .button_insta button {
         border: none;
@@ -1802,5 +1830,18 @@ iframe,
         border: 1px solid white;
     }
 
+    .button_w_s {
+        font-size: 15px;
+        width: 110px;
+        height: 38px;
+        margin-top: 2%;
+        padding: 2%;
 
-}
+
+    }
+
+    .app-container .app-title img {
+        width: 50%;
+        height: auto;
+        margin-top: 2%;
+    }
